--- a/JiaoBaoYun-hb/css/mine/apply.css
+++ b/JiaoBaoYun-hb/css/mine/apply.css
@@ -1,39 +1,121 @@
-.search-form .mui-input-row {
-	line-height: 2rem;
+
+
+
+#list-container {
+	padding-top: 3.5rem;
 }
 
-.search-form .search-btn {
-	line-height: 3rem;
-	padding: 6px 0;
-	display: inline;
-}
-.mui-btn-blue,
-.mui-btn-primary,
-input[type=submit]:enabled:active {
-	color: #fff;
-	border: #13b7f6;
-	background-color: #13b7f6;
+.mui-table-view-cell p {}
+
+.mui-table-view-cell p:nth-child(1) {
 	font-size: 1.5rem;
 	font-weight: bold;
-}
-.search-form input:nth-child(1) {
-	width: 87%;
-	background-color: #ffffff;
-	text-align: left;
-	border-radius: 50px;
-	padding: 0 15px;
 	color: #000000;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
-.mui-btn-blue,
-.mui-btn-primary,
-input[type=submit] {
-	color: #fff;
-	border: #13b7f6;
-	background-color: #13b7f6;
-	font-size: 1.5rem;
-	font-weight: bold;
+.mui-bar~.mui-content .mui-fullscreen {
+	top: 10px;
+	height: auto;
 }
+
+.mui-pull-top-tips {
+	position: absolute;
+	top: -20px;
+	left: 50%;
+	margin-left: -25px;
+	width: 40px;
+	height: 40px;
+	border-radius: 100%;
+	z-index: 1;
+}
+
+.mui-bar~.mui-pull-top-tips {
+	top: 24px;
+}
+
+.mui-pull-top-wrapper {
+	width: 42px;
+	height: 42px;
+	display: block;
+	text-align: center;
+	background-color: #efeff4;
+	border: 1px solid #ddd;
+	border-radius: 25px;
+	background-clip: padding-box;
+	box-shadow: 0 4px 10px #bbb;
+	overflow: hidden;
+}
+
+.mui-pull-top-tips.mui-transitioning {
+	-webkit-transition-duration: 200ms;
+	transition-duration: 200ms;
+}
+
+.mui-pull-top-tips .mui-pull-loading {
+	/*-webkit-backface-visibility: hidden;
+				-webkit-transition-duration: 400ms;
+				transition-duration: 400ms;*/
+	margin: 0;
+}
+
+.mui-pull-top-wrapper .mui-icon,
+.mui-pull-top-wrapper .mui-spinner {
+	margin-top: 7px;
+}
+
+.mui-pull-top-wrapper .mui-icon.mui-reverse {
+	/*-webkit-transform: rotate(180deg) translateZ(0);*/
+}
+
+.mui-pull-bottom-tips {
+	text-align: center;
+	background-color: #efeff4;
+	font-size: 15px;
+	line-height: 40px;
+	color: #777;
+}
+
+.mui-pull-top-canvas {
+	overflow: hidden;
+	background-color: #fafafa;
+	border-radius: 40px;
+	box-shadow: 0 4px 10px #bbb;
+	width: 40px;
+	height: 40px;
+	margin: 0 auto;
+}
+
+.mui-pull-top-canvas canvas {
+	width: 40px;
+}
+
+.mui-slider-indicator.mui-segmented-control {
+	background-color: #efeff4;
+}
+
+.search-form .mui-icon-clear {
+	position: relative!important;
+	top: 1px!important;
+	right: 38px!important;
+	margin-right: -38px!important;
+}
+
+.input-group {
+	display: flex;
+	display: -webkit-flex;
+	flex-direction: row;
+	align-items: center;
+	height: 38px;
+	background: white;
+}
+
+.search-input::-webkit-input-placeholder {
+	font-size: 1.2rem;
+}
+
 a img {
 	width: 4rem;
 	height: 4rem;
@@ -98,46 +180,57 @@ a>p {
 	float: right;
 }
 
-.apply-message{
+.apply-message {
 	margin-right: 28px;
 }
-.search-input{
-	max-width: 80%;
-}
-.search-form{
+
+
+/*.search-form{
 	padding:.5rem .5rem;
-}
-.search-btn{
+}*/
+
+.search-btn {
 	height: 33px;
 }
+
 .mui-search .mui-placeholder {
 	text-align: left;
 	padding-left: .5rem;
 	font-size: 1.5rem;
 }
-.mui-input-row .mui-input-clear~.mui-icon-clear{
+
+
+/*.mui-input-row .mui-input-clear~.mui-icon-clear{
 	right: 20%;
-}
-.apply-container,.qun-portrait,.apply-info,.apply-state{
+}*/
+
+.apply-container,
+.qun-portrait,
+.apply-info,
+.apply-state {
 	display: flex;
 	display: -webkit-flex;
 }
-.qun-portrait{
+
+.qun-portrait {
 	width: 4rem;
 	height: 4rem;
 	border-radius: 50%;
 }
-.apply-container{
+
+.apply-container {
 	width: 100%;
 	flex-direction: row;
 	align-content: center;
 }
-.apply-info{
+
+.apply-info {
 	flex-grow: 1;
 	align-items: center;
 	color: #000000;
 }
-.apply-state{
+
+.apply-state {
 	min-width: 4rem;
 	align-items: center;
 }
