--- a/JiaoBaoYun-hb/css/qiuzhi/attention-persons.css
+++ b/JiaoBaoYun-hb/css/qiuzhi/attention-persons.css
@@ -17,7 +17,10 @@
  */
 .info-container{
 	max-width: 60%;
-	padding-left:.5rem;
+	padding: .5rem 0 0 .5rem;
+}
+.person-info{
+	line-height: 120%;
 }
 .attentioned-btn,.attention-btn{
 	max-width: 25%;
@@ -53,6 +56,9 @@
 	color: white;
 	border: 1px solid #1db8F1;
 	background-color: #1db8F1;
+}
+.mui-btn-outlined{
+	width: 7rem;
 }
 
 .mui-bar~.mui-content .mui-fullscreen {
