--- a/JiaoBaoYun-hb/css/iconfont/iconfont.css
+++ b/JiaoBaoYun-hb/css/iconfont/iconfont.css
@@ -109,6 +109,8 @@
 
 .icon-lishijilu:before { content: "\e621"; }
 
+.icon-huxiangguanzhu:before { content: "\e641"; }
+
 .icon-renren:before { content: "\e609"; }
 
 .icon-dongtai1:before { content: "\e671"; }
@@ -242,4 +244,3 @@
 .icon-banxiabiao:before { content: "\e638"; }
 
 .icon-shanchu2:before { content: "\e647"; }
-
