--- a/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-sub.css
+++ b/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-sub.css
@@ -32,6 +32,8 @@ p {
 .experts-show {
 	padding: 1rem;
 }
+
+
 /*专家图标大小*/
 .expert-icon {
 	font-size: 1.5rem;
@@ -68,7 +70,6 @@ p {
 
 .mui-slider-indicator .mui-icon {
 	border: none;
-	/*font-size: 35px;*/
 }
 
 .ask-container {
@@ -85,7 +86,7 @@ p {
 }
 
 .mui-segmented-control.mui-scroll-wrapper {
-	height: 8rem;
+	height: 10rem;
 }
 
 .mui-segmented-control.mui-segmented-control-inverted .mui-control-item img {
@@ -94,50 +95,67 @@ p {
 	border-radius: 50px;
 }
 
+.mui-segmented-control.mui-segmented-control-inverted .mui-control-item:first-child {
+	margin-left: 1.25rem !important;
+}
+
+#allExpert {
+	padding: 1.8rem 1.5rem;
+}
+
+#allExpert p {
+	color: #12B7F5;
+	font-size: 1.2rem;
+}
+
 .mui-segmented-control.mui-segmented-control-inverted .mui-control-item {
-	border: 1px solid #e4e4e4;
-	height: 7rem;
-	width: 8rem;
+	border: 1px solid #E4E4E4;
+	height: 9rem;
+	width: 8.5rem;
 	vertical-align: middle;
 	text-align: center;
-	padding: 1rem 1.5rem;
-	margin: 0 0.25rem;
+	padding: 1.8rem 1.5rem;
+	margin: 0 0.5rem;
 }
 
 .mui-segmented-control.mui-segmented-control-inverted .mui-control-item p {
 	color: #000000;
 	margin: 0px;
+	margin-top: 0.5rem;
 }
 
-
 /*专家风采*/
-
 .export-show {
 	color: #B7B7B7;
+	line-height: normal;
+	height: 0.8rem;
 }
 
 
 /*问题标题*/
-
 .ask-title {
 	color: #222222;
 }
 
 
 /*频道信息*/
-
 .question-bottom,
 .channel-title {
 	color: #B7B7B7;
 }
 
-/*.mui-table-view-divider {
+.mui-content,
+.mui-table-view {
 	background-color: #F8F9FB;
-}*/
-.mui-content,.mui-table-view{
-	background-color:#F8F9FB ;
 }
-.mui-table-view-cell{
+
+.mui-table-view-cell {
 	background-color: #fff;
 	margin-top: 1rem;
+}
+
+#experts_sw .mui-control-item {
+	margin-top: 0.25rem;
+	border-radius: 3px;
+	box-shadow: 0px 0px 8px rgba(228, 228, 228, 0.7);
 }
