学生作业详情界面

--- a/JiaoBaoYun-hb/css/homework/workdetail-stu.css
+++ b/JiaoBaoYun-hb/css/homework/workdetail-stu.css
@@ -38,6 +38,7 @@ html,body,.mui-content{
 	left: 0;
 	background-color: #F8F9FB;
 	height: 8.8rem;
+	z-index: 88;
 }
 .startWork-hint{
 	padding-top: 1rem;
