--- a/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-sub.css
+++ b/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-sub.css
@@ -20,7 +20,7 @@
 	z-index: 666;
 	font-size: 3rem;
 	color: white;
-	padding: 1rem;
+	padding: 12px 10.5px;
 	background-color: #12B7F5;
 	border-radius: 50%;
 }
@@ -146,6 +146,7 @@ p {
 
 .question-bottom,
 .channel-title {
+	font-size:1.12rem;
 	color: #B7B7B7;
 }
 
