--- a/JiaoBaoYun-hb/css/mine/apply.css
+++ b/JiaoBaoYun-hb/css/mine/apply.css
@@ -203,3 +203,12 @@ a>p {
 	color:#808080 !important;
 	font-size: 1.2rem !important;
 }
+.mui-btn-green{
+	background-color: #1DB8F1;
+}
+.mui-btn{
+	border: none;
+}
+.mui-btn-outlined{
+	color: #B7B7B7;
+}
