--- a/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-answerDetailSub.css
+++ b/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-answerDetailSub.css
@@ -66,7 +66,7 @@
 .questionContent-container{
 	padding:0 10px;
 	padding-top: 40px;
-	border-bottom: solid gray 1px;
+/*	border-bottom: solid gray 1px;*/
 	background-color: white;
 }
 .question-container{
@@ -99,6 +99,10 @@
 }
 .answer-imgs{
 	width: 100%;
+}
+/*求知回答图片 样式*/
+.answer-img{
+	padding: 0 2px;
 }
 .btn-attention{
 	margin-top: 5px;
