--- a/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-sub.css
+++ b/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-sub.css
@@ -171,3 +171,9 @@ p {
 	1px 2px 1px rgba(230,230,230,0.4);*/
 	box-shadow: 0px 2px 4px rgba(183, 183, 183, 0.2);
 }
+.mui-table-view:after{
+	background-color: transparent;
+}
+.mui-table-view:before{
+	background-color: transparent;
+}
