--- a/JiaoBaoYun-hb/css/qiuzhi/attention-persons.css
+++ b/JiaoBaoYun-hb/css/qiuzhi/attention-persons.css
@@ -58,7 +58,7 @@
 	background-color: #1db8F1;
 }
 .mui-btn-outlined{
-	min-width: 8rem;
+	min-width: 20%;
 }
 
 .mui-bar~.mui-content .mui-fullscreen {
