调整下拉刷新方式，记事增加上传图片

--- a/JiaoBaoYun-hb/css/utils/MultiMedia.css
+++ b/JiaoBaoYun-hb/css/utils/MultiMedia.css
@@ -27,7 +27,7 @@
 .multimedia-picture {
 	/*图片*/
 	overflow: hidden;
-	background-color: red;
+	/*background-color: red;*/
 	position: relative;
 }
 
