--- a/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-answerDetailSub.css
+++ b/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-answerDetailSub.css
@@ -175,5 +175,8 @@
 	height: 4rem;
 	width: 4rem;
 	max-width: 14%;
-	padding: 0 0 2rem 2rem;
+	padding: .2rem 0 2rem 2rem;
+}
+.comment-personName{
+	line-height: 1.2;
 }
