--- a/JiaoBaoYun-hb/css/quan/class_space.css
+++ b/JiaoBaoYun-hb/css/quan/class_space.css
@@ -122,10 +122,13 @@ div>.icon-xiangce:before,
  */
 
 .group-button {
-	margin: 10%;
-	width: 80%;
+	position: absolute;
+	bottom: 0;
+	z-index: 99;
+	margin: 2.5%;
+	width: 95%;
 	height: 4rem;
-	border-radius: 1.8rem;
+	border-radius: 0.4rem;
 	font-size: 2rem;
 	letter-spacing: 1rem;
 }
