展现加关注按钮 修改我关注的人

--- a/JiaoBaoYun-hb/css/show/show.css
+++ b/JiaoBaoYun-hb/css/show/show.css
@@ -29,7 +29,14 @@
 	color: white;
 	background-color:#1db8F1;
 }
-
+.btn-attentioned{
+	border: none;
+	margin-top: 5px;
+	min-width: 7rem;
+	max-width: 25%;
+	color: white;
+	background-color:#b7b7b7;
+}
 .ellipsis-show {
 	/*内容*/
 	display: -webkit-box;
