--- a/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-sub.css
+++ b/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-sub.css
@@ -20,7 +20,7 @@
 	z-index: 666;
 	font-size: 3rem;
 	color: white;
-	padding: 12px 10.5px;
+	padding: 1rem;
 	background-color: #12B7F5;
 	border-radius: 50%;
 }
