--- a/JiaoBaoYun-hb/css/mine/apply.css
+++ b/JiaoBaoYun-hb/css/mine/apply.css
@@ -210,3 +210,13 @@ a>p {
 .mui-btn-outlined{
 	color: #B7B7B7;
 }
+.apply-container{
+	background-color: white;
+	padding: 10px 15px 0; 
+}
+.apply-container>p{
+	font-size: 1.5rem;
+}
+.mui-table-view-divider{
+	background-color: rgb(238,239,243);
+}
