--- a/JiaoBaoYun-hb/css/homework/homework-commit.css
+++ b/JiaoBaoYun-hb/css/homework/homework-commit.css
@@ -47,7 +47,6 @@ html,body,.mui-content{
 	padding-top: 1rem;
 }
 .answer-img{
-	width: 20%;
 	padding: .5rem;
 }
 .homework-info p,.stu-name{
@@ -57,7 +56,7 @@ html,body,.mui-content{
 	border-bottom: solid 1px #DEDFE0;
 }
 .homework-info,.result-text{
-	padding: 1rem 0;
+	padding: 15px 0;
 }
 
 
