--- a/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-answerDetailSub.css
+++ b/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-answerDetailSub.css
@@ -36,9 +36,11 @@
 }
 /*专家信息栏*/
 .export-info{
-	max-width: 55%;
+	width: 55%;
 	padding-left:5px;
 	margin-top: -2px;
+	flex-grow: 1;
+	margin: auto 0;
 }
 /*作者内容控件*/
 .anthor-container{
@@ -52,6 +54,9 @@
 	z-index: 50;
 	background-color: white;
 	border-radius: 10px;
+	display: flex;
+	display: -webkit-flex;
+	align-items: center;
 }
 .questionContent-container{
 	padding:0 10px;
@@ -138,10 +143,13 @@
 .anthor-name{
 	color: #323232;
 	font-size: 1.5rem;
+	/*line-height: 1.2;*/
 }
 .anthor-intro{
 	color: #808080;
 	font-size: 1.3rem;
+	 flex-basis:auto;
+	/*line-height: 1.2;*/
 }
 .mui-table-view{
 	border: none;
