--- a/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-sub.css
+++ b/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-sub.css
@@ -151,7 +151,7 @@ p {
 
 .mui-content,
 .mui-table-view {
-	/*background-color: #F8F9FB;*/
+	background-color: #F8F9FB;
 }
 
 .mui-table-view-cell {
