--- a/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-sub.css
+++ b/JiaoBaoYun-hb/css/qiuzhi/qiuzhi-sub.css
@@ -13,15 +13,12 @@
 	margin-right: .5rem;
 }
 
-.icon-myQuestion {
+.add-question {
 	position: fixed;
 	bottom: 2rem;
 	right: 2rem;
+	width: 5rem;
 	z-index: 666;
-	font-size: 3rem;
-	color: white;
-	padding: 1rem;
-	background-color: #12B7F5;
 	border-radius: 50%;
 }
 
@@ -156,7 +153,7 @@ p {
 
 .mui-table-view-cell {
 	background-color: #fff;
-	margin-top: 1rem;
+	margin-top: .6rem;
 }
 
 #experts_sw .mui-control-item {
