--- a/JiaoBaoYun-hb/css/show/show.css
+++ b/JiaoBaoYun-hb/css/show/show.css
@@ -22,18 +22,26 @@
 	background-color: white;
 }
 .btn-attention{
-	border: none;
+	/*border: none;
 	margin-top: 5px;
 	min-width: 7rem;
-	max-width: 25%;
+	max-width: 25%;*/
+	text-align:center;
+	width: 55px;
+	height: 28px;
+	border: 0;padding: 0;
 	color: white;
 	background-color:#1db8F1;
 }
 .btn-attentioned{
-	border: none;
+	/*border: none;
 	margin-top: 5px;
 	min-width: 7rem;
-	max-width: 25%;
+	max-width: 25%;*/
+	text-align:center;
+	width: 55px;
+	height: 28px;
+	border: 0;padding: 0;
 	color: white;
 	background-color:#b7b7b7;
 }
