--- a/JiaoBaoYun-hb/css/homework/homework-publish.css
+++ b/JiaoBaoYun-hb/css/homework/homework-publish.css
@@ -116,6 +116,7 @@
 .class-container{
 	border: solid 1px #E4E4E4;
 	margin: 0.2rem 0.5rem;
+	padding: .2rem .3rem 0.1rem;
 	display: inline-block;
 	font-size: 1.2rem;
 	color: #808080;
