--- a/JiaoBaoYun-hb/css/quan/class_space.css
+++ b/JiaoBaoYun-hb/css/quan/class_space.css
@@ -114,18 +114,22 @@ div>.icon-xiangce:before,
 /**
  * 班级空间样式
  */
-
-
+.quit-container{
+	width: 100%;
+	position: absolute;
+	bottom: 0;
+	z-index: 99;
+	height:5rem;
+	padding: 5px 0;
+	box-shadow: 0px -1px 2px #E4E4E4;
+}
 /**
  * 班级群 
  * 退群button样式
  */
 
 .group-button {
-	position: absolute;
-	bottom: 0;
-	z-index: 99;
-	margin: 2.5%;
+	margin-left: 2.5%;
 	width: 95%;
 	height: 4rem;
 	border-radius: 0.4rem;
