0005243: 我发布的界面“未提交和已提交”的部分颜色改为#b7b7b7

--- a/JiaoBaoYun-hb/css/homework/homework.css
+++ b/JiaoBaoYun-hb/css/homework/homework.css
@@ -135,9 +135,12 @@ header .mui-icon-bars:before{
 	color: #808080;
 	font-size: 1.4rem;
 }
+.publisher-container{
+	color: #B7B7B7;
+}
 /*额外信息*/
 .homework-bottom>p{
-	color: #808080;
+	color: #B7B7B7;
 	font-size: 1.2rem;
 }
 /*.subject-icon{
