--- a/JiaoBaoYun-hb/css/iconfont/iconfont.css
+++ b/JiaoBaoYun-hb/css/iconfont/iconfont.css
@@ -97,6 +97,8 @@
 
 .icon-xiaoxizhongxin:before { content: "\e611"; }
 
+.icon-dianzan1:before { content: "\e691"; }
+
 .icon-write:before { content: "\e608"; }
 
 .icon-qunziliao2:before { content: "\e615"; }
@@ -114,6 +116,8 @@
 .icon-renren:before { content: "\e609"; }
 
 .icon-dongtai1:before { content: "\e671"; }
+
+.icon-chakan:before { content: "\e697"; }
 
 .icon-liulan:before { content: "\e635"; }
 
