0005249: 作业纯数字 不换行

--- a/JiaoBaoYun-hb/css/homework/workdetail-stu.css
+++ b/JiaoBaoYun-hb/css/homework/workdetail-stu.css
@@ -59,6 +59,7 @@ html,body,.mui-content{
 }
 .brief-title,.brief-content{
 	color: #404040;
+	word-wrap: break-word;
 }
 .work-detail{
 	margin-bottom: 8.8rem;
