作业和其他输入逻辑

--- a/JiaoBaoYun-hb/css/mine/apply.css
+++ b/JiaoBaoYun-hb/css/mine/apply.css
@@ -222,3 +222,12 @@ a>p {
 	color: #323232 !important;
 	padding-right: 1rem;
 }
+.btn-applied{
+	
+}
+.center-popover{
+	position: fixed;
+	top: 90px;
+	left: 5%;
+	width: 90%;
+}
