修改编辑图标

--- a/JiaoBaoYun-hb/css/iconfont/iconfont.css
+++ b/JiaoBaoYun-hb/css/iconfont/iconfont.css
@@ -99,6 +99,8 @@
 
 .icon-dianzan1:before { content: "\e691"; }
 
+.icon-bianji1:before { content: "\e64f"; }
+
 .icon-write:before { content: "\e608"; }
 
 .icon-qunziliao2:before { content: "\e615"; }
@@ -248,3 +250,4 @@
 .icon-banxiabiao:before { content: "\e638"; }
 
 .icon-shanchu2:before { content: "\e647"; }
+
