--- a/JiaoBaoYun-hb/css/homework/workdetail.css
+++ b/JiaoBaoYun-hb/css/homework/workdetail.css
@@ -1,9 +1,9 @@
-.mui-control-content {
+/*.mui-control-content {
 	background-color: white;
 	min-height: 512px;
 }
 .mui-control-content .mui-loading {
 	margin-top: 50px;
-}
+}*/
 
 
