--- a/JiaoBaoYun-hb/css/iconfont/iconfont.css
+++ b/JiaoBaoYun-hb/css/iconfont/iconfont.css
@@ -111,6 +111,8 @@
 
 .icon-yunpan:before { content: "\e607"; }
 
+.icon-fanhui2:before { content: "\e651"; }
+
 .icon-lishijilu:before { content: "\e621"; }
 
 .icon-huxiangguanzhu:before { content: "\e641"; }
